--- a/style.css
+++ b/style.css
@@ -1,22 +1,103 @@
+
+
+body {
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 15vh;
-    gap: 2vh;
+    width: 50vh;
+    height: 75vh;
+    margin: 10vh auto;
+    border: solid 2px #000000;
+    border-radius: 16px;
+    padding: 32px;
+    background-color: #b8c5d8;
+}
+
+
+.operationScreen {
+    width: 100%;
+    height: 10%;
+    background-color: #f5f7fa;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    border-left: solid 2px #000000;
+    border-right: solid 2px #000000;
+    border-top: solid 2px #000000;
+    text-align: right;
+    padding: 3px 6px;
+    font-size: 2em;
+    font-family: roboto, sans-serif;
+}
+
+.display {
+    width: 100%;
+    height: 18%;
+    background-color: #f5f7fa;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    border-left: solid 2px #000000;
+    border-right: solid 2px #000000;
+    border-bottom: solid 2px #000000;
+    text-align: right;
+    padding: 3px 6px;
+    font-size: 4em;
+    font-family: roboto, sans-serif;
 }
 
 button {
-    width: 12vh;
-    height: 12vh;
+    width: 8vh;
+    height: 8vh;
+    flex: 1;
+    border-radius: 8px;
+    font-size: 1.25em;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    font-family: roboto, sans-serif;
+    border: solid 2px #000000;
 }
 
 .top {
-    width: 25vh;
+    width: 20vh;
 }
 
 .row {
     display:flex;
-    gap: 1vh;
+    gap: 2vh;
+    width: 100%;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2vh;
+    margin-top: 24px;
+    width: 100%;
+}
+
+.clear {
+    background-color: rgb(255, 75, 75);
+    color: white;
+
+}
+
+.backspace {
+    background-color: rgb(75, 75, 225);
+    color: white;
+}
+
+.operator {
+    background-color: rgb(255, 178, 36);
+}
+
+.equalSymbol {
+    background-color: rgb(19, 255, 19);
+    color: white;
 }
